--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button onclick="input('7')">7</button>
         <button onclick="input('8')">8</button>
         <button onclick="input('9')">9</button>
-        <button onclick="input('')"></button>
+        <button onclick="input('x')">x</button>
         <br>
         <button onclick="input('4')">4</button>
         <button onclick="input('5')">5</button>
